# SFCGAL_CI

./: .cirrus.yml  .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .runsettings  .travis.yml  AUTHORS  CI-INTEGRATION.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_RELEASE.md  NEWS  PSC.md  README.md  RELEASES.md  SECURITY.md  SFCGALConfig.cmake.in  SFCGALConfigVersion.cmake.in  SPONSORS.md  apply_clang_tidy.sh  authors.html  dev.html  documentation.html  index.html  installation.html  list_mr.sh  screencast.html  sfcgal-config.in  sfcgal.pc.in  sonar-project.properties  vcpkg.json
sfcgalop/: CMakeLists.txt  README.md  constructors.cpp  constructors.hpp  error_handler.cpp  error_handler.hpp  examples.sh  getopt_win.cpp  getopt_win.hpp  io.c  io.cpp  io.h  io.hpp  main.c  main.cpp  operations.c  operations.h  safe_string.c  safe_string.h  sfcgal_dsl.py  text_ui.cpp  text_ui.hpp  timeus.h  timeus.hpp  util.c  util.cpp  util.h  util.hpp
sfcgalop/examples/: architectural_complex.py  basic_geometries.py  boolean_operations_demo.py  complex_assembly.py  mechanical_assembly.py  mixed_geometries.py  simple_sphere.py  truncated_cone.py
sfcgalop/operations/: operations.c  operations.cpp  operations.cpp.backup  operations.h  operations.hpp  operations_alphashapes.c  operations_alphashapes.h  operations_common.h  operations_construction.c  operations_construction.h  operations_coordinate.c  operations_coordinate.h  operations_metrics.c  operations_metrics.h  operations_params.c  operations_params.h  operations_registry.c  operations_registry.h  operations_skeleton.c  operations_skeleton.h  operations_spatial_analysis.c  operations_spatial_analysis.h  operations_tesselation.c  operations_tesselation.h  operations_transformation.c  operations_transformation.h  operations_validity.c  operations_validity.h  operations_visibility.c  operations_visibility.h
sfcgalop/test/: CMakeLists.txt  README.md  test_minimal.cpp
src/: BSplineCurve.cpp  BSplineCurve.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  CatmullRomCurve.cpp  CatmullRomCurve.h  Coordinate.cpp  Coordinate.h  Curve.cpp  Curve.h  Cylinder.cpp  Cylinder.h  DereferenceIterator.h  Envelope.cpp  Envelope.h  Exception.cpp  Exception.h  Geometry.cpp  Geometry.h  GeometryCollection.cpp  GeometryCollection.h  GeometryVisitor.cpp  GeometryVisitor.h  HermiteCurve.cpp  HermiteCurve.h  Kernel.h  LineString.cpp  LineString.h  MultiLineString.cpp  MultiLineString.h  MultiPoint.cpp  MultiPoint.h  MultiPolygon.cpp  MultiPolygon.h  MultiSolid.cpp  MultiSolid.h  NURBSCurve.cpp  NURBSCurve.h  Point.cpp  (+31 more)
src/algorithm/: BoundaryVisitor.cpp  BoundaryVisitor.h  ConsistentOrientationBuilder.cpp  ConsistentOrientationBuilder.h  Grid.cpp  Grid.h  Intersection2D.cpp  Intersection3D.cpp  ShapeRegularization.cpp  ShapeRegularization.h  alphaShapes.cpp  alphaShapes.h  alphaShapes3D.cpp  alphaShapes3D.h  alphaWrapping3D.cpp  alphaWrapping3D.h  area.cpp  area.h  boolean3D.h  buffer3D.cpp  buffer3D.h  centroid.cpp  centroid.h  chamfer3D.cpp  chamfer3D.h  collect.cpp  collect.h  collectionExtract.cpp  collectionExtract.h  collectionHomogenize.cpp  collectionHomogenize.h  collectionToMulti.cpp  collectionToMulti.h  compare.cpp  compare.h  connection.cpp  connection.h  convexHull.cpp  convexHull.h  covers.cpp  (+85 more)
src/algorithm/detail/: FaceFilters.h
src/capi/: .clang-tidy  sfcgal_c.cpp  sfcgal_c.h
src/detail/: ComplexComparator.h  ConstraintInfo.h  EnvelopeVisitor.cpp  EnvelopeVisitor.h  ForceValidityVisitor.cpp  ForceValidityVisitor.h  GeometrySet.cpp  GeometrySet.h  GetPointsVisitor.cpp  GetPointsVisitor.h  Interval.cpp  Interval.h  SegmentStore.h  TestGeometry.h  TypeForDimension.h  polygonSetToMultiPolygon.cpp  polygonSetToMultiPolygon.h  ublas.h
src/detail/algorithm/: FaceFilters.h  SurfaceUtils.h  coversPoints.cpp  coversPoints.h  simplification.cpp  simplification.h
src/detail/generator/: building.cpp  building.h  disc.cpp  disc.h  hoch.cpp  hoch.h  sierpinski.cpp  sierpinski.h
src/detail/graph/: Edge.cpp  Edge.h  GeometryGraph.h  GeometryGraphBuilder.h  Vertex.cpp  Vertex.h
src/detail/io/: OsgFactory.cpp  OsgFactory.h  Serialization.cpp  Serialization.h  WkbReader.cpp  WkbReader.h  WkbWriter.cpp  WkbWriter.h  WktReader.cpp  WktReader.h  WktWriter.cpp  WktWriter.h
src/detail/tools/: CharArrayBuffer.cpp  CharArrayBuffer.h  InputStreamReader.h  Log.cpp  Log.h  Registry.cpp  Registry.h
src/detail/transform/: AffineTransform2.cpp  AffineTransform2.h  AffineTransform3.cpp  AffineTransform3.h  Force2D.cpp  Force2D.h  ForceM.h  ForceOrderPoints.cpp  ForceOrderPoints.h  ForceZ.cpp  ForceZ.h  ForceZOrderPoints.cpp  ForceZOrderPoints.h  RoundTransform.cpp  RoundTransform.h  forceM.cpp
src/detail/triangulate/: ConstraintDelaunayTriangulation.cpp  ConstraintDelaunayTriangulation.h  markDomains.h  triangulateInGeometrySet.cpp  triangulateInGeometrySet.h
src/io/: GeometryStreams.cpp  GeometryStreams.h  OBJ.cpp  OBJ.h  STL.cpp  STL.h  ewkt.cpp  ewkt.h  geojson.cpp  geojson.h  osg.cpp  osg.h  vtk.cpp  vtk.h  wkb.cpp  wkb.h  wkt.cpp  wkt.h
src/primitive3d/: Box.cpp  Box.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
src/triangulate/: triangulate2DZ.cpp  triangulate2DZ.h  triangulatePolygon.cpp  triangulatePolygon.h  triangulatePolygonalDomain.cpp  triangulatePolygonalDomain.h
test/bench/: Bench.cpp  Bench.h  BenchArea.cpp  BenchContainer.cpp  BenchMinkowski.cpp  BenchPredicate.cpp  BenchStraightSkeleton.cpp  BenchTriangulation.cpp  BenchWKT.cpp  CMakeLists.txt  IntersectionPerfTest.cpp  KernelPerfTest.cpp  TestModule.cpp
test/regress/capi/: CMakeLists.txt  main.c
test/unit/: CMakeLists.txt  TestModule.cpp
test/unit/SFCGAL/: BSplineCurveTest.cpp  BezierCurveTest.cpp  BoxTest.cpp  ConeTest.cpp  CoordinateTest.cpp  CubeTest.cpp  Cylinder.cpp  CylinderTest.cpp  Elephant.cpp  EnvelopeTest.cpp  GeometryCollectionTest.cpp  GeometryTest.cpp  GeometryVisitorTest.cpp  (+27 more)
(+309 files in other folders)
